# bicep2tf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bicep2tf.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  unmapped-type.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  coverage.md
examples/: README.md
examples/functions-flex-bicep/: abbreviations.json  main.bicep
examples/functions-flex-bicep/app/: api.bicep  rbac.bicep  storage-PrivateEndpoint.bicep
examples/functions-flex-terraform/: conversion_report.json  locals.tf  main.tf  outputs.tf  variables.tf
examples/functions-flex-terraform/modules/api/: main.tf
examples/functions-flex-terraform/modules/identity/: main.tf
examples/functions-flex-terraform/modules/monitoring/: main.tf
examples/functions-flex-terraform/modules/networking/: main.tf
examples/functions-flex-terraform/modules/rbac/: main.tf
examples/functions-flex-terraform/modules/storage/: main.tf
examples/functions-flex-terraform/modules/storage_private_endpoint/: main.tf
mappings/: avm.yaml  microsoft.authorization.yaml  microsoft.insights.yaml  microsoft.keyvault.yaml  microsoft.managedidentity.yaml  microsoft.network.yaml  microsoft.opinsights.yaml  microsoft.resources.yaml  microsoft.storage.yaml  microsoft.web.yaml
src/bicep2tf/: __init__.py  cli.py  compile.py  config.py  convert.py  expressions.py  ir.py  mapping.py  render.py  report.py  validate.py
tests/: test_convert.py  test_expressions.py  test_smoke.py
tests/cases/simple-rg/: input.bicep
